# capture

./: #correlator_header.txt#  #dsaX_spectrometer.cu#  #dsaX_spectrometer_reorder.cu#  CMakeLists.txt  Makefile  Makefile~  README.md  correlator_header.txt  correlator_header.txt~  dsaX_correlator_trigger  dsaX_correlator_trigger.c  dsaX_correlator_trigger.c~  dsaX_correlator_udpdb_thread  dsaX_correlator_udpdb_thread.c~  dsaX_dbdisk.c  dsaX_dbdisk.c.bkp  dsaX_dbdisk.c~  dsaX_dbdisk_fb.c  dsaX_dbdiskfb.c  dsaX_spectrometer  dsaX_spectrometer.cu  dsaX_spectrometer.cu~  dsaX_spectrometer_def.h  dsaX_spectrometer_reorder.cu  dsaX_spectrometer_reorder.cu.orig  dsaX_spectrometer_reorder.cu~  dsaX_spectrometer_udpdb_thread  dsaX_spectrometer_udpdb_thread.c  dsaX_spectrometer_udpdb_thread.c~  spectrometer_header.txt  spectrometer_header.txt~
